# trainorder

./: .gitignore  README.md  cfg.py  patching.ipynb  probe.py  pyproject.toml  train.py
train/: cfg.py  data.py  train.py
