[project]
name = "trainorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "einops>=0.8.1",
    "peft>=0.18.0",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "transformer-lens>=2.16.1",
    "transformers>=4.57.1",
]
